--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/tadejrebernjak/news-combinator#readme",
   "dependencies": {
     "axios": "^0.24.0",
+    "body-parser": "^1.19.1",
     "cheerio": "^1.0.0-rc.10",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
