--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/tadejrebernjak/news-combinator#readme",
   "dependencies": {
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
