--- a/news-combinator/package.json
+++ b/news-combinator/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@vue/cli": "^4.5.15",
     "autoprefixer": "^9",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
